--- a/01/index.html
+++ b/01/index.html
@@ -7,6 +7,6 @@
 
 
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.3.0/lib/p5.js"></script>
-	<script src="p-sketch.js"></script>
+	<script src="k-sketch.js"></script>
 </body>
 </html>
